# cubepath

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: TODO.md  resources.md
guide/: cubepath.md  metadata.yaml
guide/defaults/: html.yaml  pdf.yaml
guide/filters/: callouts.lua
guide/styles/: callouts.css  compact.html  compact.typ
guide/templates/: conf.typst
scripts/: build.sh
src/cubepath/: cube.py  diagrams.py
tests/: test_algorithms.py  test_cube.py  test_diagrams.py
